--- a/bphirun6klangnas.html
+++ b/bphirun6klangnas.html
@@ -1,217 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>B Phisex</title>
-  </head>
-  <body>
-    <img src="bphisex.jpg">
-    <div>
-      B run sex klang nas
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sexy Man Gallery</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Sexy Man Gallery</h1>
+        <div class="image-container">
+            <img src="bphisex.jpg" alt="Sexy Man">
+        </div>
+        <div style="font-size: 30px">
+          B RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANGB RUN SEX KLANG
+        </div>
     </div>
-    <div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div><div>
-      B run sex klang nas
-    </div>
-  </body>
+</body>
 </html>
